--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
+<body class="grid__container">
 <div class="text__pack1">
   <section class="Text__Clifford">
     <p class="text__name">Daniel Clifford</p>
@@ -26,25 +26,29 @@
                 for the free intro course and found it incredibly fun! I enrolled shortly thereafter. 
                 The next 12 weeks was the best - and most grueling - time of my life. Since completing 
                 the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</caption>
-    </section>
+              </section>
+            </div>
+            <div class="text__pack2">   
     <section class="text__walters">
       <p class="text__name">Jonathan Walters</p>
         <p class="text__small">Verified Graduate</p>
           <h2 class="quote">team was very supportive and kept me motivated</h2> 
              <caption class="text__story">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer 
             for a big company. This was one of the best investments I’ve made in myself. ”</caption>
-    </section>
-</div>
+             </div>
+             </section>
 
-<div class="text__pack2">
+
+<div class="text__pack3">
   <section class="text__harmon">
     <p class="text__name">Jeanette Harmon</p>
        <p class="text__small">Verified Graduate</p>
           <h3 class="quote">An overall wonderful and rewarding experience</h3>
             <caption class="text__story">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living 
             while doing something I love. ”</caption>
+            </div>
   </section>
-
+  <div class="text__pack4">
   <section class="Text__Abrams">
     <p class="text__name">Patrick Text__Abrams</p>
       <p class="text__small">Verified Graduate</p>
@@ -54,9 +58,10 @@
           gave me the confidence necessary to be able to go out in the world and present myself as a capable 
           junior developer. The standard is above the rest. You will get the personal attention you need from 
             an incredible community of smart and amazing people. ”</caption>
-      </section>
+          </div>
+         </section>
 </div>
-
+<div class="text__pack5">
 <section class="Text__whittle"></section>
   <p class="text__name">Kira Whittle</p>
     <p class="text__small">Verified Graduate</p>
@@ -69,11 +74,9 @@
             could ever have. In fact, I’ve often referred to it during interviews as an example of my developent 
             experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 
             100% recommend! ”</caption>
+          </div>
   </section>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Debby</a>.
-  </div>
+ 
 </body>
 </html>
